# kalshi-predictive-bot

./: .env.example  .gitignore  Makefile  README.md  THIRD_PARTY_NOTICES.md  alembic.ini  docker-compose.postgres.yml  pyproject.toml
alembic/: env.py
deploy/: COMMIT_BASED_DEPLOYMENT.md
docs/: CATEGORY_INGESTION_CENSUS.md  DATABASE_RECOVERY.md  DATA_MODEL.md  GH3_BLOCKER_SOURCE_AUDIT_20260721.md  GH4_PAPER_ORDER_ACTIVATION.md  PAPER_TO_LIVE_IMPLEMENTATION.md  PHASE_1.md  PHASE_2.md  PHASE_2_5.md  PHASE_2_6.md  PHASE_2_7.md  PHASE_2_8.md  PHASE_2_9.md  PHASE_3A.md  PHASE_3B.md  PHASE_3C.md  PHASE_3C_5.md  PHASE_3D.md  PHASE_3E.md  PHASE_3F.md  PHASE_3G.md  PHASE_3H.md  PHASE_3J.md  PHASE_3K.md  PHASE_3L.md  PHASE_3M.md  PHASE_3O_MARKET_MEMORY.md  PHASE_3Q.md  PHASE_3R.md  PHASE_3S.md  PHASE_3T.md  PHASE_3U.md  PHASE_3V.md  PHASE_3W.md  POSTGRES_SETUP.md  REFRESH_READINESS_RUNBOOK.md  ROADMAP.md  RUNBOOK.md  RUNTIME_CENSUS_PAPER_THROUGHPUT.md  SCHEDULER.md  (+2 more)
examples/: economic_sample.json  synthetic_markets_candidates.json
prompts/: next_phase.md
scripts/: archive_cold_storage.ps1  category_ingestion_census.py  gh1x_census.py  nightly_paper_runner.sh  nyc_w10_review.py  nyc_w11_preview.py  nyc_w8_shadow_cadence.py  nyc_w9_live_window_feed.py  pmb10_provenance_portfolio.py  pmb11_counterfactual.py  pmb12_sensitivity.py  pmb13_gate_margin.py  pmb14_liquidity_boundary.py  pmb15_joint_surface.py  pmb16_robust_policy.py  pmb17_oos_policy.py  pmb18_distribution_shift.py  pmb19_tail_stress.py  pmb20_factor_breakpoint.py  pmb21_pairwise_stress.py  pmb23_stress_guard.py  (+100 more)
(+1162 files in other folders)
