[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kalshi-predictive-bot"
version = "0.1.0"
description = "Read-only Phase 1 forecasting foundation for Kalshi public market data."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dejoia Trading Bot" }]
dependencies = [
    "alembic>=1.13.0",
    "cryptography>=42.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "psycopg[binary]>=3.1.0",
    "pydantic-settings>=2.2.0",
    "rich>=13.7.0",
    "SQLAlchemy>=2.0.0",
    "typer>=0.12.0,<0.27.0",
    "uvicorn>=0.30.0",
    "websockets>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10.0",
    "pandas-stubs>=2.2.0.240603",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]
benchmark = [
    "pyarrow>=16.0.0",
]

[project.scripts]
kalshi-bot = "kalshi_predictor.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"kalshi_predictor.ui" = ["templates/*.html", "static/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
